k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookeshop-backend
  namespace: bookeshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dimitartrposki/kiii-project:backend
          ports:
            - containerPort: 8080
