k8s/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookeshop-frontend
  namespace: bookeshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dimitartrposki/kiii-project:frontend
          ports:
            - containerPort: 80
