k8s/statefulset-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookeshop-db
  namespace: bookeshop
spec:
  serviceName: bookeshop-db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: db-init-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: db-init-sql
          configMap:
            name: initsql
            items:
              - key: init.sql
                path: init.sql
              - key: views.sql
                path: views.sql
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
