k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bookeshop
spec:
  ports:
#    - protocol: TCP
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
  type: NodePort
