k8s/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: bookeshop-db
  namespace: bookeshop
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
