k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: bookeshop
spec:
  selector:
    app: frontend
  ports:
    #    - protocol: TCP
    - port: 80
      targetPort: 80
  type: ClusterIP
